--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include ':app', ':drawing', ':animator', ':drawable', ':layout'
+include ':app', ':drawing', ':animator', ':drawable', ':layout', ':scalableimageview', ':touch'
 rootProject.name='HencoderPlus'
