--- a/19_constraintlayout/src/main/AndroidManifest.xml
+++ b/19_constraintlayout/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
-	xmlns:android = "http://schemas.android.com/apk/res/android" package = "com.hsicen.a19_constraintlayout">
+	xmlns:android = "http://schemas.android.com/apk/res/android"
+	xmlns:tools = "http://schemas.android.com/tools"
+	package = "com.hsicen.a19_constraintlayout">
 
 	<application
 		android:allowBackup = "true"
@@ -8,7 +10,12 @@
 		android:label = "@string/app_name"
 		android:roundIcon = "@mipmap/ic_launcher_round"
 		android:supportsRtl = "true"
-		android:theme = "@style/AppTheme">
+		android:theme = "@style/NoTitle"
+		tools:ignore = "GoogleAppIndexingWarning">
+		<activity android:name = ".constraint.ConstraintHelperActivity"></activity>
+		<activity android:name = ".constraint.ConstraintPositionActivity" />
+		<activity android:name = ".MotionActivity" />
+		<activity android:name = ".constraint.ConstraintActivity" />
 		<activity android:name = ".MainActivity">
 			<intent-filter>
 				<action android:name = "android.intent.action.MAIN" />
