--- a/20_motionlayout/src/main/AndroidManifest.xml
+++ b/20_motionlayout/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
 		android:supportsRtl = "true"
 		android:theme = "@style/NoTitle"
 		tools:ignore = "GoogleAppIndexingWarning">
-		<activity android:name = ".SceneConstraintActivity"></activity>
+		<activity android:name = ".CardFlyActivity"></activity>
+		<activity android:name = ".SceneConstraintActivity" />
 		<activity android:name = ".MotionMenuActivity" />
 		<activity android:name = ".MainActivity">
 			<intent-filter>
