--- a/21_drag_nestedscroll/src/main/AndroidManifest.xml
+++ b/21_drag_nestedscroll/src/main/AndroidManifest.xml
@@ -10,7 +10,9 @@
 		android:roundIcon = "@mipmap/ic_launcher_round"
 		android:supportsRtl = "true"
 		android:theme = "@style/AppTheme">
-		<activity android:name = ".DragListenerListActivity"></activity>
+		<activity android:name = ".drag.DragUpDownActivity"></activity>
+		<activity android:name = ".drag.DragCollectActivity" />
+		<activity android:name = ".DragListenerListActivity" />
 		<activity android:name = ".MainActivity">
 			<intent-filter>
 				<action android:name = "android.intent.action.MAIN" />
