--- a/23_rxjava/build.gradle
+++ b/23_rxjava/build.gradle
@@ -39,6 +39,23 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.6.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
 
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.8'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.10'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+
+    //Platform bindings:
+    implementation 'com.jakewharton.rxbinding3:rxbinding:3.1.0'
+
+    //AndroidX library bindings
+    implementation 'com.jakewharton.rxbinding3:rxbinding-core:3.1.0'
+    implementation 'com.jakewharton.rxbinding3:rxbinding-appcompat:3.1.0'
+    implementation 'com.jakewharton.rxbinding3:rxbinding-drawerlayout:3.1.0'
+    implementation 'com.jakewharton.rxbinding3:rxbinding-leanback:3.1.0'
+    implementation 'com.jakewharton.rxbinding3:rxbinding-recyclerview:3.1.0'
+    implementation 'com.jakewharton.rxbinding3:rxbinding-slidingpanelayout:3.1.0'
+    implementation 'com.jakewharton.rxbinding3:rxbinding-swiperefreshlayout:3.1.0'
+    implementation 'com.jakewharton.rxbinding3:rxbinding-viewpager:3.1.0'
+    implementation 'com.jakewharton.rxbinding3:rxbinding-viewpager2:3.1.0'
+
+    //Google 'material' library bindings
+    implementation 'com.jakewharton.rxbinding3:rxbinding-material:3.1.0'
 }
