--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 buildscript {
-    ext.kotlin_version = '1.3.60'
+    ext.kotlin_version = '1.3.61'
+
     repositories {
         google()
         jcenter()
@@ -20,5 +21,15 @@ allprojects {
 }
 
 task clean(type: Delete) {
+    doLast {
+        println("4")
+    }
+
+    doFirst {
+        println("3")
+    }
+
+    println("1")
     delete rootProject.buildDir
+    println("2")
 }
