--- a/29_hotfix/build.gradle
+++ b/29_hotfix/build.gradle
@@ -31,4 +31,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
+    implementation 'com.squareup.okio:okio:2.3.0'
 }
