--- a/29_hotfix/build.gradle
+++ b/29_hotfix/build.gradle
@@ -22,7 +22,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
 }
 
 dependencies {
@@ -33,4 +32,31 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     implementation 'com.squareup.okio:okio:2.3.0'
+}
+
+//需要改动文件的路径
+def patchPath = "com/hsicen/a29_hotfix/Title"
+
+task hotfix {
+    doLast {
+        exec {
+            commandLine 'rm', '-r', './build/patch'
+        }
+
+        exec {
+            commandLine 'mkdir', './build/patch'
+        }
+
+        exec {
+            commandLine 'javac', "./src/main/java/${patchPath}.java", '-d', './build/patch'
+        }
+
+        exec {
+            commandLine 'C:\\Android\\SDK\\build-tools\\29.0.3\\d8', "./build/patch/${patchPath}.class", '--output', './build/patch'
+        }
+
+        exec {
+            commandLine 'mv', "./build/patch/classes.dex", './build/patch/hotfix.dex'
+        }
+    }
 }
