自定义编译时注解库，实现ButterKnife绑定View的功能

--- a/30_annotation/build.gradle
+++ b/30_annotation/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 29
@@ -34,5 +35,5 @@ dependencies {
     //implementation project(':30_annotation_reflection')
     implementation project(':30_lib')
     implementation project(':30_lib_annotation')
-    //annotationProcessor project(':30_lib_processor')
+    kapt project(':30_lib_processos')
 }
