--- a/9_kolitn/build.gradle
+++ b/9_kolitn/build.gradle
@@ -37,4 +37,5 @@ dependencies {
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1'
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
