TCP/IP 协议族，HTTPS连接的建立过程

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,29 +1,41 @@
-include ':4_retrofit', ':6_okhttp', ':25_gradle', ':28_plugin', ':28_plugin_lib', ':29_hotfix', ':30_annotation', ':30_annotation_reflection', ':30_lib', ':30_lib_annotation', ':30_lib_processos', ':31_generics',
-        ':5_retrofit',
-        ':9_kolitn',
-        ':16_multitouch1',
-        ':10_drawing',
-        ':11_animator',
-        ':12_drawable',
-        ':13_layout',
-        ':14_touch',
-        ':15_scalableimageview',
-        ':16_multitouch',
-        ':17_recyclerviewcore',
-        ':18_constraintlayout',
-        ':19_motionlayout',
-        ':20_viewpager',
-        ':21_drag_nestedscroll',
-        ':22_thread',
-        ':22_Thread_interaction',
-        ':23_rxjava',
-        ':24_io'
-
 rootProject.name = 'HencoderPlus'
+
+include ':1_http'
+include ':2_encrypt'
+include ':3_author'
+include ':4_tcpip'
+include ':4_retrofit'
+include ':5_retrofit'
+include ':6_okhttp'
+include ':9_kolitn'
+include ':10_drawing'
+include ':11_animator'
+include ':12_drawable'
+include ':13_layout'
+include ':14_touch'
+include ':15_scalableimageview'
+include ':16_multitouch'
+include ':16_multitouch1'
+include ':17_recyclerviewcore'
+include ':18_constraintlayout'
+include ':19_motionlayout'
+include ':20_viewpager'
+include ':21_drag_nestedscroll'
+include ':22_thread'
+include ':22_Thread_interaction'
+include ':23_rxjava'
+include ':24_io'
+include ':25_gradle'
+include ':28_plugin'
+include ':28_plugin_lib'
+include ':29_hotfix'
+include ':30_annotation'
+include ':30_annotation_reflection'
+include ':30_lib'
+include ':30_lib_annotation'
+include ':30_lib_processos'
+include ':31_generics'
 include ':32_view_draw_process'
 include ':33_hashmap'
 include ':34_gradle_process'
 include ':35_jvm'
-include ':1_http'
-include ':2_encrypt'
-include ':3_author'
