--- a/25_gradle/build.gradle
+++ b/25_gradle/build.gradle
@@ -4,10 +4,23 @@ apply plugin: 'kotlin-android-extensions'
 
 //引用插件
 apply plugin: 'Hencoder'  //properties文件名
+apply plugin: 'hsicen.asm.lifecycle'
 
 //自定义配置
 hsicen {
     name '黄思程!!!'
+}
+
+buildscript {
+    repositories {
+        google()
+        jcenter()
+        maven {url('../asm_lifecycle_repo')}
+    }
+
+    dependencies {
+        classpath('com.hsicen.plugin:asm_plugin:1.0.0')
+    }
 }
 
 android {
@@ -65,13 +78,12 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.1.0'
+    implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 }
 
 task bumpVersion() {
     doLast {
-
         def versionPropertyFile = file('version.properties')
         def versionProps = new Properties()
         versionProps.load(new FileInputStream(versionPropertyFile))
