--- a/14_touch/src/main/AndroidManifest.xml
+++ b/14_touch/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".TouchSecondActivity"></activity>
+        <activity android:name=".sample.TouchEventActivity"></activity>
+        <activity android:name=".TouchSecondActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
