--- a/36_launch_mode/src/main/AndroidManifest.xml
+++ b/36_launch_mode/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:launchMode="singleInstance"
+            android:launchMode="singleTask"
             android:taskAffinity="com.hsicen.singleInstance">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
