Room与LiveData结合使用实例

--- a/settings.gradle
+++ b/settings.gradle
@@ -6,6 +6,7 @@ def include_project = { dir, name ->
 }
 
 include_project('Jetpack','roomsample')
+include_project('Jetpack','workmanagersample')
 
 include ':coroutine'
 include ':koinsample'
