--- a/Jetpack/workmanagersample/build.gradle
+++ b/Jetpack/workmanagersample/build.gradle
@@ -1,14 +1,13 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "com.hsicen.roomsample"
+        applicationId "com.hsicen.workmanagersample"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
@@ -35,7 +34,4 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    implementation 'androidx.room:room-runtime:2.2.5'
-    kapt 'androidx.room:room-compiler:2.2.5'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 }
