--- a/hiltsample/build.gradle
+++ b/hiltsample/build.gradle
@@ -50,9 +50,9 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     //Hilt 依赖
-    implementation 'com.google.dagger:hilt-android:2.28.3-alpha'
-    kapt 'com.google.dagger:hilt-android-compiler:2.28.3-alpha'
-    kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha02'
+    kapt 'androidx.hilt:hilt-compiler:1.0.0'
+    kapt 'com.google.dagger:hilt-android-compiler:2.35'
+    implementation 'com.google.dagger:hilt-android:2.35'
 
     //ButterKnife
     implementation 'com.jakewharton:butterknife:10.2.3'
