--- a/30_annotation_reflection/build.gradle
+++ b/30_annotation_reflection/build.gradle
@@ -10,7 +10,7 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner TestDeps.runner
         consumerProguardFiles 'consumer-rules.pro'
     }
 
