--- a/coroutine/build.gradle
+++ b/coroutine/build.gradle
@@ -14,7 +14,7 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner TestDeps.runner
     }
 
     buildTypes {
