--- a/hiltsample/build.gradle
+++ b/hiltsample/build.gradle
@@ -17,7 +17,7 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner TestDeps.runner
     }
 
     buildTypes {
