--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,9 @@ buildscript {
   }
 
   dependencies {
-    classpath "com.android.tools.build:gradle:${Versions.gradle}"
-    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${Versions.kotlin}"
-    classpath "com.google.dagger:hilt-android-gradle-plugin:$Versions.hilt"
+    classpath("com.android.tools.build:gradle:4.2.1")
+    classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${Versions.kotlin}")
+    classpath("com.google.dagger:hilt-android-gradle-plugin:$Versions.hilt")
   }
 }
 
