--- a/Jetpack/viewmodel/src/main/AndroidManifest.xml
+++ b/Jetpack/viewmodel/src/main/AndroidManifest.xml
@@ -9,9 +9,11 @@
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
     android:theme="@style/Theme.HencoderPlus">
+    <activity android:name=".SecondActivity"></activity>
     <activity android:name=".MainActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
+
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
