--- a/settings.gradle
+++ b/settings.gradle
@@ -8,6 +8,7 @@ def include_project = { dir, name ->
 include_project('Jetpack', 'viewmodel')
 include_project('Jetpack', 'roomsample')
 include_project('Jetpack', 'coroutine')
+include_project('Jetpack', 'livedata')
 include_project('Jetpack', 'workmanagersample')
 
 include_project('Inject', 'koinsample')
