--- a/Jetpack/viewbinding/src/main/AndroidManifest.xml
+++ b/Jetpack/viewbinding/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.hsicen.viewmodel">
+  package="com.hsicen.viewbinding">
 
   <application
     android:allowBackup="true"
@@ -9,14 +9,15 @@
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
     android:theme="@style/Theme.HencoderPlus">
-    <activity android:name=".SecondActivity" />
     <activity android:name=".MainActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
-
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
+
+    <activity android:name=".PhoneActivity" />
+
   </application>
 
 </manifest>
