--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
   }
 
   dependencies {
-    classpath("com.android.tools.build:gradle:$Versions.gradle")
+    classpath("com.android.tools.build:gradle:7.0.3")
     classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${Versions.kotlin}")
     classpath("com.google.dagger:hilt-android-gradle-plugin:$Versions.hilt")
   }
