--- a/gradle.properties
+++ b/gradle.properties
@@ -10,10 +10,8 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Fri Aug 14 11:32:55 CST 2020
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
-android.useAndroidX=true
-# Automatically convert third-party libraries to use AndroidX
-#android.enableJetifier=true
-# Kotlin code style for this project: "official" or "obsolete":
+#Tue Nov 02 18:52:28 CST 2021
 kotlin.code.style=official
+org.gradle.jvmargs=-Xmx2048m -Dfile.encoding\=UTF-8
+android.useAndroidX=true
+android.enableJetifier=true
