todo list compose project.

--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,7 @@
 buildscript {
+  ext {
+    compose_version = '1.0.1'
+  }
   repositories {
     google()
     mavenCentral()
@@ -6,7 +9,7 @@ buildscript {
 
   dependencies {
     classpath("com.android.tools.build:gradle:$Versions.gradle")
-    classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$Versions.kotlin")
+    classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.21")
     classpath("com.google.dagger:hilt-android-gradle-plugin:$Versions.hilt")
   }
 }
