animateXXXasState and animatable .

--- a/compose/03_state/src/main/AndroidManifest.xml
+++ b/compose/03_state/src/main/AndroidManifest.xml
@@ -10,13 +10,11 @@
     android:supportsRtl="true"
     android:theme="@style/Theme.HencoderPlus">
     <activity
-      android:name=".MainActivity"
+      android:name=".Animation"
       android:exported="true"
-      android:label="@string/app_name"
       android:theme="@style/Theme.HencoderPlus.NoActionBar">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
-
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
