android 12 export adapt.

--- a/Jetpack/viewbinding/src/main/AndroidManifest.xml
+++ b/Jetpack/viewbinding/src/main/AndroidManifest.xml
@@ -9,14 +9,18 @@
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
     android:theme="@style/Theme.HencoderPlus">
-    <activity android:name=".MainActivity">
+    <activity
+      android:name=".MainActivity"
+      android:exported="true">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
 
-    <activity android:name=".PhoneActivity" />
+    <activity
+      android:name=".PhoneActivity"
+      android:exported="true" />
 
   </application>
 
