--- a/Jetpack/coroutine/src/main/AndroidManifest.xml
+++ b/Jetpack/coroutine/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:tools="http://schemas.android.com/tools"
   package="com.hsicen.coroutine">
 
   <uses-permission android:name="android.permission.INTERNET" />
@@ -10,8 +11,12 @@
     android:label="@string/app_name"
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
-    android:theme="@style/Theme.HencoderPlus">
-    <activity android:name=".MainActivity">
+    android:theme="@style/Theme.HencoderPlus"
+    tools:node="merge">
+    <activity
+      android:name=".MainActivity"
+      android:exported="true"
+      tools:node="merge">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
