--- a/hencoder/19_motionlayout/src/main/AndroidManifest.xml
+++ b/hencoder/19_motionlayout/src/main/AndroidManifest.xml
@@ -1,27 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-	xmlns:android = "http://schemas.android.com/apk/res/android"
-	xmlns:tools = "http://schemas.android.com/tools"
-	package = "com.hsicen.a20_motionlayout">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:tools="http://schemas.android.com/tools"
+  package="com.hsicen.a20_motionlayout">
 
-	<application
-		android:allowBackup = "true"
-		android:icon = "@mipmap/ic_launcher"
-		android:label = "@string/app_name"
-		android:roundIcon = "@mipmap/ic_launcher_round"
-		android:supportsRtl = "true"
-		android:theme = "@style/NoTitle"
-		tools:ignore = "GoogleAppIndexingWarning">
-		<activity android:name = ".CardFlyActivity"></activity>
-		<activity android:name = ".SceneConstraintActivity" />
-		<activity android:name = ".MotionMenuActivity" />
-		<activity android:name = ".MainActivity">
-			<intent-filter>
-				<action android:name = "android.intent.action.MAIN" />
+  <application
+    android:allowBackup="true"
+    android:icon="@mipmap/ic_launcher"
+    android:label="@string/app_name"
+    android:roundIcon="@mipmap/ic_launcher_round"
+    android:supportsRtl="true"
+    android:theme="@style/NoTitle"
+    tools:ignore="GoogleAppIndexingWarning">
+    <activity
+      android:name=".CardFlyActivity"
+      android:exported="true" />
+    <activity
+      android:name=".SceneConstraintActivity"
+      android:exported="true" />
+    <activity
+      android:name=".MotionMenuActivity"
+      android:exported="true" />
+    <activity
+      android:name=".MainActivity"
+      android:exported="true">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
 
-				<category android:name = "android.intent.category.LAUNCHER" />
-			</intent-filter>
-		</activity>
-	</application>
+        <category android:name="android.intent.category.LAUNCHER" />
+      </intent-filter>
+    </activity>
+  </application>
 
 </manifest>
