--- a/hencoder/21_drag_nestedscroll/src/main/AndroidManifest.xml
+++ b/hencoder/21_drag_nestedscroll/src/main/AndroidManifest.xml
@@ -1,25 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-	xmlns:android = "http://schemas.android.com/apk/res/android"
-	package = "com.hsicen.a21_drag_nestedscroll">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+  package="com.hsicen.a21_drag_nestedscroll">
 
-	<application
-		android:allowBackup = "true"
-		android:icon = "@mipmap/ic_launcher"
-		android:label = "@string/app_name"
-		android:roundIcon = "@mipmap/ic_launcher_round"
-		android:supportsRtl = "true"
-		android:theme = "@style/AppTheme">
-		<activity android:name = ".DragUpDownActivity"></activity>
-		<activity android:name = ".DragCollectActivity" />
-		<activity android:name = ".DragListenerListActivity" />
-		<activity android:name = ".MainActivity">
-			<intent-filter>
-				<action android:name = "android.intent.action.MAIN" />
+  <application
+    android:allowBackup="true"
+    android:icon="@mipmap/ic_launcher"
+    android:label="@string/app_name"
+    android:roundIcon="@mipmap/ic_launcher_round"
+    android:supportsRtl="true"
+    android:theme="@style/AppTheme">
+    <activity
+      android:name=".DragUpDownActivity"
+      android:exported="true" />
+    <activity
+      android:name=".DragCollectActivity"
+      android:exported="true" />
+    <activity
+      android:name=".DragListenerListActivity"
+      android:exported="true" />
+    <activity
+      android:name=".MainActivity"
+      android:exported="true">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
 
-				<category android:name = "android.intent.category.LAUNCHER" />
-			</intent-filter>
-		</activity>
-	</application>
+        <category android:name="android.intent.category.LAUNCHER" />
+      </intent-filter>
+    </activity>
+  </application>
 
 </manifest>
