--- a/hencoder/30_annotation/src/main/AndroidManifest.xml
+++ b/hencoder/30_annotation/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
     android:theme="@style/AppTheme">
-    <activity android:name=".SecondActivity" />
+    <activity
+      android:name=".SecondActivity"
+      android:exported="true" />
     <activity
       android:name=".MainActivity"
       android:exported="true">
