--- a/compose/04_animation/src/main/AndroidManifest.xml
+++ b/compose/04_animation/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.hsicen.state">
+  package="com.hsicen.a04_animation">
 
   <application
     android:allowBackup="true"
@@ -11,10 +11,10 @@
     android:theme="@style/Theme.HencoderPlus">
     <activity
       android:name=".MainActivity"
-      android:exported="true"
-      android:theme="@style/Theme.HencoderPlus.NoActionBar">
+      android:exported="true">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
+
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
