--- a/build.gradle
+++ b/build.gradle
@@ -16,5 +16,6 @@ allprojects {
     google()
     mavenCentral()
     maven { url 'https://jitpack.io' }
+    maven { url 'https://pkgs.dev.azure.com/MicrosoftDeviceSDK/DuoSDK-Public/_packaging/Duo-SDK-Feed/maven/v1' }
   }
 }
