--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ buildscript {
   repositories {
     google()
     mavenCentral()
+    maven { url Mavens.aliyun }
+    maven { url Mavens.jitpackIo }
   }
 
   dependencies {
@@ -15,7 +17,7 @@ allprojects {
   repositories {
     google()
     mavenCentral()
-    maven { url 'https://jitpack.io' }
-    maven { url 'https://pkgs.dev.azure.com/MicrosoftDeviceSDK/DuoSDK-Public/_packaging/Duo-SDK-Feed/maven/v1' }
+    maven { url Mavens.aliyun }
+    maven { url Mavens.jitpackIo }
   }
 }
