--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,4 @@ kotlin.code.style=official
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding\=UTF-8
 android.useAndroidX=true
 android.enableJetifier=true
+org.gradle.configuration-cache=true
