--- a/Jetpack/datastore/src/main/AndroidManifest.xml
+++ b/Jetpack/datastore/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:tools="http://schemas.android.com/tools">
 
   <application
     android:allowBackup="true"
@@ -15,10 +16,19 @@
       android:theme="@style/Theme.HencoderPlus">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
-
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
+
+    <provider
+      android:name="androidx.startup.InitializationProvider"
+      android:authorities="${applicationId}.androidx-startup"
+      android:exported="false"
+      tools:node="merge">
+      <meta-data
+        android:name="com.hsicen.datastore.SpStoreInitializer"
+        android:value="androidx.startup" />
+    </provider>
   </application>
 
 </manifest>
