--- a/compose/todo/src/main/AndroidManifest.xml
+++ b/compose/todo/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
+  xmlns:android="http://schemas.android.com/apk/res/android"
   package="com.hsicen.todo">
 
   <application
@@ -8,12 +9,12 @@
     android:label="@string/app_name"
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
-    android:theme="@style/Theme.HencoderPlus">
+    android:theme="@style/Theme.Todo.NoActionBar">
     <activity
       android:name=".MainActivity"
       android:exported="true"
       android:label="@string/app_name"
-      android:theme="@style/Theme.HencoderPlus.NoActionBar">
+      android:theme="@style/Theme.Todo.NoActionBar">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
 
